--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <link href="https://josephcrosmanplays532.github.io/static/55910a7cd204c37c/go/css/common_combined.css.gz.css" rel="stylesheet" type="text/css">
 
 <link href="https://josephcrosmanplays532.github.io/static/55910a7cd204c37c/go/css/studio.css.gz.css" rel="stylesheet" type="text/css">
-<link href="https://josephcrosmanplays532.github.io/static/55910a7cd204c37c/go/css/video_voice_vendor.css" rel="stylesheet" type="text/css">
+<link href="https://josephcrosmanplays532.github.io/static/55910a7cd204c37c/go/css/video_voice_vendor.css.gz.css" rel="stylesheet" type="text/css">
 <link href="https://josephcrosmanplays532.github.io/static/55910a7cd204c37c/go/css/worknote.css.gz.css" rel="stylesheet" type="text/css">
 <link href="https://josephcrosmanplays532.github.io/static/55910a7cd204c37c/go/css/importer-share.css.gz.css" rel="stylesheet" type="text/css">
 <link href="https://josephcrosmanplays532.github.io/static/55910a7cd204c37c/go/css/importer.css.gz.css" rel="stylesheet" type="text/css">
@@ -273,7 +273,7 @@ function voiceBanner(bannerId) {
             resize_studio = false;
         }
 
-        studio_data.flashvars={"apiserver":"https://goanimate.herokuapp.com/","storePath":"https://josephcrosmanplays532.github.io/store/3a981f5cb2739137/<store>","isEmbed":1,"ctc":"go","ut":60,"bs":"default","appCode":"go","page":"","siteId":"go","lid":13,"isLogin":"Y","retut":1,"clientThemePath":"https://josephcrosmanplays532.github.io/static/55910a7cd204c37c/<client_theme>","themeId":"business","tlang":"en_US","s3base":"https://josephcrosmanplays532.github.io/thumbnails","presaveId":"m-1","goteam_draft_only":1,"isWide":1,"nextUrl":"/dashboard/videos","tray":"retro"};
+        studio_data.flashvars={"apiserver":"https://goanimate.herokuapp.com/","storePath":"https://josephcrosmanplays532.github.io/store/3a981f5cb2739137/<store>","isEmbed":1,"ctc":"go","ut":60,"bs":"default","appCode":"go","page":"","siteId":"go","lid":13,"isLogin":"Y","retut":1,"clientThemePath":"https://josephcrosmanplays532.github.io/static/55910a7cd204c37c/<client_theme>","themeId":"business","tlang":"en_US","s3base":"https://josephcrosmanplays532.github.io/thumbnails","presaveId":"m-1","goteam_draft_only":1,"isWide":1,"nextUrl":"/dashboard/videos","tray":"custom"};
 
         var _ccad = null;
 
