--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <link rel="dns-prefetch" href="https://josephcrosmanplays532.github.io">
 
-<title>Comedy Cartoon Maker - Create Sitcoms, Zany Neighibor & More. GoAnimate!</title>
+<title>The Video Maker From GoAnimate - Make a Video for YouTube!</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
