--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <link rel="dns-prefetch" href="https://d2bm7x1jqouzel.cloudfront.net">
 <link rel="dns-prefetch" href="//d3v4eglovri8yt.cloudfront.net">
 
-<title>The Video Maker from Vyond - Make a Video for YouTube!</title>
+<title>The Video Maker from GoAnimate - Make a Video for YouTube!</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<meta name="description" content="The Video Maker lets You make a video for YouTube for free! Drag &amp; drop or type &amp; go.  It's Fast, Fun, Easy and Free -  Vyond!">
+<meta name="description" content="The Video Maker lets You make a video for YouTube for free! Drag &amp; drop or type &amp; go.  It's Fast, Fun, Easy and Free -  GoAnimate!">
 <meta property="og:site_name" content="Vyond">
 <meta property="fb:app_id" content="177116303202">
 
