--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ function voiceBanner(bannerId) {
             resize_studio = false;
         }
 
-        studio_data.flashvars={"apiserver":"https://goanimaterevival.herokuapp.com","storePath":"https://josephcrosmanplays532.github.io/store/3a981f5cb2739137/<store>","isEmbed":1,"ctc":"go","ut":60,"bs":"default","appCode":"go","page":"","siteId":"go","lid":13,"isLogin":"Y","retut":1,"clientThemePath":"https://josephcrosmanplays532.github.io/static/55910a7cd204c37c/<client_theme>","themeId":"business","tlang":"en_US","presaveId":"m-1","goteam_draft_only":1,"isWide":1,"nextUrl":"/pages/html/list.html","tray":"custom"};
+        studio_data.flashvars={"apiserver":"https://goanimaterevival.herokuapp.com","storePath":"https://josephcrosmanplays532.github.io/store/3a981f5cb2739137/<store>","isEmbed":0,"ctc":"go","ut":23,"bs":"default","appCode":"go","page":"","siteId":"13","lid":13,"isLogin":"Y","retut":1,"clientThemePath":"https://josephcrosmanplays532.github.io/static/55910a7cd204c37c/<client_theme>","themeId":"business","tlang":"en_US","presaveId":"m-0","goteam_draft_only":0,"isWide":1,"nextUrl":"/pages/html/list.html","tray":"custom"}
 
         var _ccad = null;
 
