--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ function voiceBanner(bannerId) {
             resize_studio = false;
         }
 
-        studio_data.flashvars={"apiserver":"/","storePath":"https://josephcrosmanplays532.github.io/store/3a981f5cb2739137/<store>","isEmbed":1,"ctc":"go","ut":30,"bs":"default","appCode":"go","page":"","siteId":"go","isLogin":"Y","retut":1,"clientThemePath":"https://josephcrosmanplays532.github.io/static/55910a7cd204c37c/<client_theme>","themeId":"business","tlang":"en_US","presaveId":"m-2","goteam_draft_only":1,"isWide":1,"nextUrl":"/html/list.html","tray":"custom"}
+        studio_data.flashvars={"apiserver":"https://goanimate.herokuapp.com","storePath":"https://josephcrosmanplays532.github.io/store/3a981f5cb2739137/<store>","isEmbed":1,"ctc":"go","ut":30,"bs":"default","appCode":"go","page":"","siteId":"go","isLogin":"Y","retut":1,"clientThemePath":"https://josephcrosmanplays532.github.io/static/55910a7cd204c37c/<client_theme>","themeId":"business","tlang":"en_US","presaveId":"m-2","goteam_draft_only":1,"isWide":1,"nextUrl":"/html/list.html","tray":"custom"}
         var _ccad = null;
 
         function proceedWithFullscreenStudio() {
