--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <link rel="dns-prefetch" href="https://d2bm7x1jqouzel.cloudfront.net">
 <link rel="dns-prefetch" href="//d3v4eglovri8yt.cloudfront.net">
 
-<title>The Video Maker from GoAnimate - Make a Video for YouTube!</title>
+<title>The Video Maker from Vyond - Make a Video for YouTube!</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<meta name="description" content="The Video Maker lets You make a video for YouTube for free! Drag &amp; drop or type &amp; go.  It's Fast, Fun, Easy and Free -  GoAnimate!">
+<meta name="description" content="The Video Maker lets You make a video for YouTube for free! Drag &amp; drop or type &amp; go.  It's Fast, Fun, Easy and Free -  Vyond!">
 <meta property="og:site_name" content="Vyond">
 <meta property="fb:app_id" content="177116303202">
 
@@ -103,7 +103,7 @@ height="0" width="0" style="display:none;visibility:hidden"&gt;&lt;/iframe&gt;</
 <!-- End Google Tag Manager (noscript) -->
 
 <script type="text/javascript">
-        jQuery.extend(CCStandaloneBannerAdUI, {"actionshopSWF":"https:\/\/d3v4eglovri8yt.cloudfront.net\/animation\/66453a3ba2cc5e1b\/actionshop.swf","apiserver":"http:\/\/ga.vyond.com\/","clientThemePath":"https:\/\/d3v4eglovri8yt.cloudfront.net\/static\/019b83797158fc0c\/<client_theme>","userId":"0cf4CMw1ZNCk"});
+        jQuery.extend(CCStandaloneBannerAdUI, {"actionshopSWF":"https:\/\/d3v4eglovri8yt.cloudfront.net\/animation\/66453a3ba2cc5e1b\/actionshop.swf","apiserver":"http:\/\/ga.vyond.com\/","clientThemePath":"https:\/\/d3v4eglovri8yt.cloudfront.net\/static\/add8e214e09bd155\/<client_theme>","userId":"0cf4CMw1ZNCk"});
 </script>
 
 <div class="page-container">
@@ -144,8 +144,8 @@ height="0" width="0" style="display:none;visibility:hidden"&gt;&lt;/iframe&gt;</
         <div class="close"><a href="javascript:hideVoiceAdWidget()" onclick="javascript:return hideVoiceAdWidget()">×</a></div>
         <div id="studio-voice-vendor-container">
             <ul>
-                <li><a class="gtm-ga-pageview-t2" id="voice-vendor-vb" target="_blank" href="https://voicebunny.com/?p=vyond" data-gtmv-page="/pageTracker/voicebanner/VoiceBunny" onclick="setvoicebannercookie();"><img src="https://d3v4eglovri8yt.cloudfront.net/static/add8e214e09bd155/go/img/video_voice/btn_vb.png"></a></li>
-                <li><a class="gtm-ga-pageview-t2" id="voice-vendor-va" target="_blank" href="https://www.voicearchive.com" data-gtmv-page="/pageTracker/voicebanner/InWhatLanguage" onclick="setvoicebannercookie();"><img src="https://d3v4eglovri8yt.cloudfront.net/static/add8e214e09bd155/go/img/video_voice/btn_va.png"></a></li>
+                <li><a class="gtm-ga-pageview-t2" id="voice-vendor-vb" target="_blank" href="https://voicebunny.com/?p=vyond" data-gtmv-page="/pageTracker/voicebanner/VoiceBunny" onclick="setvoicebannercookie();"><img src="https://d3v4eglovri8yt.cloudfront.net/static/019b83797158fc0c/go/img/video_voice/btn_vb.png"></a></li>
+                <li><a class="gtm-ga-pageview-t2" id="voice-vendor-iw" target="_blank" href="https://www.inwhatlanguage.com/goanimate-translations/" data-gtmv-page="/pageTracker/voicebanner/InWhatLanguage" onclick="setvoicebannercookie();"><img src="https://d3v4eglovri8yt.cloudfront.net/static/019b83797158fc0c/go/img/video_voice/btn_iw.png"></a></li>
                 <li>
                     <hr class="sperator">
                     <a class="voiceover-tips gtm-ga-pageview-t2" target="_blank" href="http://goanimate.com/video-maker-tips/tutorial-why-you-should-break-up-your-dialogue-audio-into-small-pieces-before-importing/" data-gtmv-page="/pageTracker/voicebanner/VoiceoverTips" onclick="setvoicebannercookie();"><span><i class="lightbulb"></i>Voiceover Tips &gt;</span></a>
@@ -255,7 +255,7 @@ function voiceBanner(bannerId) {
 
         var studio_data = {
             id: "Studio",
-            swf: "https://josephcrosmanplays532.github.io/animation/66453a3ba2cc5e1b/go_full.swf",
+            swf: "https://d3v4eglovri8yt.cloudfront.net/animation/66453a3ba2cc5e1b/go_full.swf",
             width: "100%",
             height: "100%",
 
@@ -273,10 +273,10 @@ function voiceBanner(bannerId) {
             resize_studio = false;
         }
 
-        studio_data.flashvars = {"apiserver":"https:\/\/goanimate-wrapper3.herokuapp.com\/","storePath":"https:\/\/josephcrosmanplays532.github.io\/store\/3a981f5cb2739137\/<store>","clientThemePath":"https:\/\/josephcrosmanplays532.github.io\/static\/55910a7cd204c37c\/<client_theme>","animationPath":"https:\/\/josephcrosmanplays532.github.io\/animation\/66453a3ba2cc5e1b\/","userId":"0cf4CMw1ZNCk","username":"bakeryb40488","uemail":"bakeryb40488@gmail.com","numContact":"0","ut":23,"ve":false,"isEmbed":0,"nextUrl":"https:\/\/goanimate-wrapper3.herokuapp.com\/player?movieId=<movieId>\/0\/1","bgload":"https:\/\/josephcrosmanplays532.github.io\/animation\/66453a3ba2cc5e1b\/go_full.swf","lid":"0","ctc":"go","themeColor":"silver","tlang":"en_US","siteId":"13","templateshow":"false","forceshow":"false","appCode":"go","lang":"en","tmcc":4048901,"fb_app_url":"https:\/\/goanimate-wrapper3.herokuapp.com\/","is_published":"0","is_private_shared":"1","is_password_protected":false,"upl":1,"hb":"1","pts":"1","msg_index":"","ad":0,"has_asset_bg":1,"has_asset_char":0,"initcb":"studioLoaded","retut":0,"featured_categories":null,"s3base":"https:\/\/josephcrosmanplays532.github.io\/thumbnails\/,https:\/\/rebornassets.wrapper.online\/","st":"","uisa":0,"u_info":"OjI6elg5SnZCOUEyTHZiY2lhZGRXTm9Nd0ljVWhNbEpGaXJFdkpEdkltdEp6RWhrQ0VIbXZIVTBjRTlhUGZKMjJoVHVTUE5vZk1XYnFtSE1vZG5TeldyQVJNcDFmUFB2NDVtR0FTSlZZ","tm":"FIN","tray":"custom","isWide":1,"newusr":1,"goteam_draft_only":0};
-         
+        studio_data.flashvars = {"movieId":"","loadas":0,"asId":"","originalId":"","apiserver":"https:\/\/ga.vyond.com\/","storePath":"https:\/\/d3v4eglovri8yt.cloudfront.net\/store\/3a981f5cb2739137\/<store>","clientThemePath":"https:\/\/d3v4eglovri8yt.cloudfront.net\/static\/019b83797158fc0c\/<client_theme>","animationPath":"https:\/\/d3v4eglovri8yt.cloudfront.net\/animation\/66453a3ba2cc5e1b\/","userId":"0cf4CMw1ZNCk","username":"bakeryb40488","uemail":"bakeryb40488@gmail.com","numContact":"0","ut":23,"ve":false,"isEmbed":0,"nextUrl":"\/go\/savedMovie\/<movieId>\/0\/1","bgload":"https:\/\/d3v4eglovri8yt.cloudfront.net\/animation\/66453a3ba2cc5e1b\/go_full.swf","lid":"0","ctc":"go","themeColor":"silver","tlang":"en_US","siteId":"13","templateshow":"false","forceshow":"false","appCode":"go","lang":"en","tmcc":4048901,"fb_app_url":"https:\/\/ga.vyond.com\/","is_published":"0","is_private_shared":"1","is_password_protected":false,"upl":1,"hb":"1","pts":"1","msg_index":"","ad":0,"has_asset_bg":1,"has_asset_char":0,"initcb":"studioLoaded","retut":0,"featured_categories":null,"s3base":"https:\/\/s3.amazonaws.com\/fs.goanimate.com\/,https:\/\/assets.vyond.com\/","st":"","uisa":0,"u_info":"OjI6elg5SnZCOUEyTHZiY2lhZGRXTm9Nd0ljVWhNbEpGaXJFdkpEdkltdEp6RWhrQ0VIbXZIVTBjRTlhUGZKMjJoVHVTUE5vZk1XYnFtSE1vZG5TeldyQVJNcDFmUFB2NDVtR0FTSlZZ","tm":"FIN","tray":"business","isWide":1,"newusr":1,"goteam_draft_only":0};
+
         var _ccad = null;
-            
+
         function proceedWithFullscreenStudio() {
             // These should be executed only when we are really ready to show the studio
             window.onbeforeunload = function(e) {
@@ -297,7 +297,7 @@ function voiceBanner(bannerId) {
             show_cc_ad = false;
             // CC template studio widget
             if (show_cc_ad) {
-                _ccad = new CCBannerAd("custom");
+                _ccad = new CCBannerAd("business");
                 (function() {
                     var ccId = undefined;
                     _ccad
@@ -551,16 +551,16 @@ function loadLegacyPreview() {
     createPreviewPlayer("playerdiv", {
         height: 360,
         width: 640,
-        player_url: "https://josephcrosmanplays532.github.io/animation/66453a3ba2cc5e1b/player.swf",
+        player_url: "https://d3v4eglovri8yt.cloudfront.net/animation/66453a3ba2cc5e1b/player.swf",
         quality: "high"
     }, {
         movieOwner: "", movieOwnerId: "", movieId: "", ut: "-1",
         movieLid: "8", movieTitle: "", movieDesc: "", userId: "", username: "", uemail: "",
-        apiserver: "https://goanimate-wrapper3.herokuapp.com/", thumbnailURL: "", copyable: "0", isPublished: "0", ctc: "go", tlang: "en_US", is_private_shared: "0",
+        apiserver: "https://ga.vyond.com/", thumbnailURL: "", copyable: "0", isPublished: "0", ctc: "go", tlang: "en_US", is_private_shared: "0",
         autostart: "1", appCode: "go", is_slideshow: "0", originalId: "0", is_emessage: "0", isEmbed: "0", refuser: "",
         utm_source: "", uid: "", isTemplate: "1", showButtons: "0", chain_mids: "", showshare: "0", averageRating: "",
-                    s3base: "https://josephcrosmanplays532.github.io/thumbnails/,https://rebornassets.wrapper.online/",
-                ratingCount: "", fb_app_url: "https://goanimate-wrapper3.herokuapp.com/", numContact: 0, isInitFromExternal: 1, storePath: "https://josephcrosmanplays532.github.io/store/3a981f5cb2739137/<store>", clientThemePath: "https://josephcrosmanplays532.github.io/static/55910a7cd204c37c/<client_theme>", animationPath: "https://josephcrosmanplays532.github.io/animation/66453a3ba2cc5e1b/",
+                    s3base: "https://s3.amazonaws.com/fs.goanimate.com/,https://assets.vyond.com/",
+                ratingCount: "", fb_app_url: "https://ga.vyond.com/", numContact: 0, isInitFromExternal: 1, storePath: "https://d3v4eglovri8yt.cloudfront.net/store/3a981f5cb2739137/<store>", clientThemePath: "https://d3v4eglovri8yt.cloudfront.net/static/019b83797158fc0c/<client_theme>", animationPath: "https://d3v4eglovri8yt.cloudfront.net/animation/66453a3ba2cc5e1b/",
         startFrame: previewStartFrame
     });
     $('#previewPlayer').removeClass('using-h5');
@@ -860,13 +860,13 @@ ImporterFile.defaults.options.restricted_mime = ["font\/x-font-ttf","font\/vnd.m
     <div class="ga-import-dnd-hint">
         Release to start uploading    </div>
 </div>
-    <div id="studio_holder" style="width: 2108px;"><object data="https://josephcrosmanplays532.github.io/animation/66453a3ba2cc5e1b/go_full.swf" type="application/x-shockwave-flash" id="Studio" width="100%" height="100%"><param name="align" value="middle"><param name="allowScriptAccess" value="always"><param name="allowFullScreen" value="true"><param name="wmode" value="window"><param name="flashvars" value="apiserver=https%3A%2F%2Fgoanimate-wrapper3.herokuapp.com%2F&amp;storePath=https%3A%2F%2Fjosephcrosmanplays532.github.io%2Fstore%2F3a981f5cb2739137%2F%3Cstore%3E&amp;clientThemePath=https%3A%2F%2Fjosephcrosmanplays532.github.io%2Fstatic%2F55910a7cd204c37c%2F%3Cclient_theme%3E&amp;animationPath=https%3A%2F%2Fjosephcrosmanplays532.github.io%2Fanimation%2F66453a3ba2cc5e1b%2F&amp;userId=0cf4CMw1ZNCk&amp;username=bakeryb40488&amp;uemail=bakeryb40488%40gmail.com&amp;numContact=0&amp;ut=23&amp;ve=false&amp;isEmbed=0&amp;nextUrl=%2Fgo%2FsavedMovie%2F%3CmovieId%3E%2F0%2F1&amp;bgload=https%3A%2F%2Fjosephcrosmanplays532.github.io%2Fanimation%2F66453a3ba2cc5e1b%2Fgo_full.swf&amp;lid=13&amp;ctc=go&amp;themeColor=silver&amp;tlang=en_US&amp;siteId=13&amp;templateshow=false&amp;forceshow=false&amp;appCode=go&amp;lang=en&amp;tmcc=4048901&amp;fb_app_url=https%3A%2F%2Fgoanimate-wrapper3.com%2F&amp;is_published=0&amp;is_private_shared=1&amp;is_password_protected=false&amp;upl=1&amp;hb=1&amp;pts=1&amp;msg_index=&amp;ad=0&amp;has_asset_bg=1&amp;has_asset_char=0&amp;initcb=studioLoaded&amp;retut=0&amp;&amp;s3base=https%3A%2F%2Fjosephcrosmanplays532.github.io%2Fthumbnails%2F%2Chttps%3A%2F%2Frebornassets.wrapper.online%2F&amp;st=&amp;uisa=0&amp;u_info=OjI6elg5SnZCOUEyTHZiY2lhZGRXTm9Nd0ljVWhNbEpGaXJFdkpEdkltdEp6RWhrQ0VIbXZIVTBjRTlhUGZKMjJoVHVTUE5vZk1XYnFtSE1vZG5TeldyQVJNcDFmUFB2NDVtR0FTSlZZ&amp;tm=FIN&amp;tray=custom&amp;isWide=1&amp;newusr=1&amp;goteam_draft_only=0"><param name="movie" value="https://josephcrosmanplays532.github.io/animation/66453a3ba2cc5e1b/go_full.swf"></object></div>
+    <div id="studio_holder" style="width: 2108px;"><object data="https://d3v4eglovri8yt.cloudfront.net/animation/66453a3ba2cc5e1b/go_full.swf" type="application/x-shockwave-flash" id="Studio" width="100%" height="100%"><param name="align" value="middle"><param name="allowScriptAccess" value="always"><param name="allowFullScreen" value="true"><param name="wmode" value="window"><param name="flashvars" value="movieId=&amp;loadas=0&amp;asId=&amp;originalId=&amp;apiserver=https%3A%2F%2Fga.vyond.com%2F&amp;storePath=https%3A%2F%2Fd3v4eglovri8yt.cloudfront.net%2Fstore%2F3a981f5cb2739137%2F%3Cstore%3E&amp;clientThemePath=https%3A%2F%2Fd3v4eglovri8yt.cloudfront.net%2Fstatic%2F019b83797158fc0c%2F%3Cclient_theme%3E&amp;animationPath=https%3A%2F%2Fd3v4eglovri8yt.cloudfront.net%2Fanimation%2F66453a3ba2cc5e1b%2F&amp;userId=0cf4CMw1ZNCk&amp;username=bakeryb40488&amp;uemail=bakeryb40488%40gmail.com&amp;numContact=0&amp;ut=23&amp;ve=false&amp;isEmbed=0&amp;nextUrl=%2Fgo%2FsavedMovie%2F%3CmovieId%3E%2F0%2F1&amp;bgload=https%3A%2F%2Fd3v4eglovri8yt.cloudfront.net%2Fanimation%2F66453a3ba2cc5e1b%2Fgo_full.swf&amp;lid=0&amp;ctc=go&amp;themeColor=silver&amp;tlang=en_US&amp;siteId=13&amp;templateshow=false&amp;forceshow=false&amp;appCode=go&amp;lang=en&amp;tmcc=4048901&amp;fb_app_url=https%3A%2F%2Fga.vyond.com%2F&amp;is_published=0&amp;is_private_shared=1&amp;is_password_protected=false&amp;upl=1&amp;hb=1&amp;pts=1&amp;msg_index=&amp;ad=0&amp;has_asset_bg=1&amp;has_asset_char=0&amp;initcb=studioLoaded&amp;retut=0&amp;&amp;s3base=https%3A%2F%2Fs3.amazonaws.com%2Ffs.goanimate.com%2F%2Chttps%3A%2F%2Fassets.vyond.com%2F&amp;st=&amp;uisa=0&amp;u_info=OjI6elg5SnZCOUEyTHZiY2lhZGRXTm9Nd0ljVWhNbEpGaXJFdkpEdkltdEp6RWhrQ0VIbXZIVTBjRTlhUGZKMjJoVHVTUE5vZk1XYnFtSE1vZG5TeldyQVJNcDFmUFB2NDVtR0FTSlZZ&amp;tm=FIN&amp;tray=business&amp;isWide=1&amp;newusr=1&amp;goteam_draft_only=0"><param name="movie" value="https://d3v4eglovri8yt.cloudfront.net/animation/66453a3ba2cc5e1b/go_full.swf"></object></div>
 <div class="voice-vendor-ad" style="display: block; right: 0px;">
         <div class="close"><a href="javascript:hideVoiceAdWidget()" onclick="javascript:return hideVoiceAdWidget()">×</a></div>
         <div id="studio-voice-vendor-container">
             <ul>
-                <li><a class="gtm-ga-pageview-t2" id="voice-vendor-vb" target="_blank" href="https://voicebunny.com/?p=vyond" data-gtmv-page="/pageTracker/voicebanner/VoiceBunny" onclick="setvoicebannercookie();"><img src="https://d3v4eglovri8yt.cloudfront.net/static/add8e214e09bd155/go/img/video_voice/btn_vb.png"></a></li>
-                <li><a class="gtm-ga-pageview-t2" id="voice-vendor-va" target="_blank" href="https://www.voicearchive.com" data-gtmv-page="/pageTracker/voicebanner/InWhatLanguage" onclick="setvoicebannercookie();"><img src="https://d3v4eglovri8yt.cloudfront.net/static/add8e214e09bd155/go/img/video_voice/btn_va.png"></a></li>
+                <li><a class="gtm-ga-pageview-t2" id="voice-vendor-vb" target="_blank" href="https://voicebunny.com/?p=vyond" data-gtmv-page="/pageTracker/voicebanner/VoiceBunny" onclick="setvoicebannercookie();"><img src="https://d3v4eglovri8yt.cloudfront.net/static/019b83797158fc0c/go/img/video_voice/btn_vb.png"></a></li>
+                <li><a class="gtm-ga-pageview-t2" id="voice-vendor-iw" target="_blank" href="https://www.inwhatlanguage.com/goanimate-translations/" data-gtmv-page="/pageTracker/voicebanner/InWhatLanguage" onclick="setvoicebannercookie();"><img src="https://d3v4eglovri8yt.cloudfront.net/static/019b83797158fc0c/go/img/video_voice/btn_iw.png"></a></li>
                 <li>
                     <hr class="sperator">
                     <a class="voiceover-tips gtm-ga-pageview-t2" target="_blank" href="http://goanimate.com/video-maker-tips/tutorial-why-you-should-break-up-your-dialogue-audio-into-small-pieces-before-importing/" data-gtmv-page="/pageTracker/voicebanner/VoiceoverTips" onclick="setvoicebannercookie();"><span><i class="lightbulb"></i>Voiceover Tips &gt;</span></a>
@@ -877,8 +877,8 @@ ImporterFile.defaults.options.restricted_mime = ["font\/x-font-ttf","font\/vnd.m
         <div class="close"><a href="javascript:hideVoiceAdWidget()" onclick="javascript:return hideVoiceAdWidget()">×</a></div>
         <div id="studio-voice-vendor-container">
             <ul>
-                <li><a class="gtm-ga-pageview-t2" id="voice-vendor-vb" target="_blank" href="https://voicebunny.com/?p=vyond" data-gtmv-page="/pageTracker/voicebanner/VoiceBunny" onclick="setvoicebannercookie();"><img src="https://d3v4eglovri8yt.cloudfront.net/static/add8e214e09bd155/go/img/video_voice/btn_vb.png"></a></li>
-                <li><a class="gtm-ga-pageview-t2" id="voice-vendor-va" target="_blank" href="https://www.voicearchive.com" data-gtmv-page="/pageTracker/voicebanner/InWhatLanguage" onclick="setvoicebannercookie();"><img src="https://d3v4eglovri8yt.cloudfront.net/static/add8e214e09bd155/go/img/video_voice/btn_va.png"></a></li>
+                <li><a class="gtm-ga-pageview-t2" id="voice-vendor-vb" target="_blank" href="https://voicebunny.com/?p=vyond" data-gtmv-page="/pageTracker/voicebanner/VoiceBunny" onclick="setvoicebannercookie();"><img src="https://d3v4eglovri8yt.cloudfront.net/static/019b83797158fc0c/go/img/video_voice/btn_vb.png"></a></li>
+                <li><a class="gtm-ga-pageview-t2" id="voice-vendor-iw" target="_blank" href="https://www.inwhatlanguage.com/goanimate-translations/" data-gtmv-page="/pageTracker/voicebanner/InWhatLanguage" onclick="setvoicebannercookie();"><img src="https://d3v4eglovri8yt.cloudfront.net/static/019b83797158fc0c/go/img/video_voice/btn_iw.png"></a></li>
                 <li>
                     <hr class="sperator">
                     <a class="voiceover-tips gtm-ga-pageview-t2" target="_blank" href="http://goanimate.com/video-maker-tips/tutorial-why-you-should-break-up-your-dialogue-audio-into-small-pieces-before-importing/" data-gtmv-page="/pageTracker/voicebanner/VoiceoverTips" onclick="setvoicebannercookie();"><span><i class="lightbulb"></i>Voiceover Tips &gt;</span></a>
