--- a/index.html
+++ b/index.html
@@ -267,13 +267,9 @@ function voiceBanner(bannerId) {
             hasVersion: "10.3"
         };
 
-        if (!enable_full_screen) {
-            studio_data.width  = 960;
-            studio_data.height  = 630;
-            resize_studio = false;
-        }
-
-        studio_data.flashvars = {"movieId":"","loadas":0,"asId":"","originalId":"","apiserver":"https:\/\/gavyond.herokuapp.com\/","storePath":"https:\/\/josephcrosmanplays532.github.io\/store\/4e75f501cfbf51e3\/<store>","clientThemePath":"https:\/\/josephcrosmanplays532.github.io\/static\/642cd772aad8e952\/<client_theme>","animationPath":"https:\/\/josephcrosmanplays532.github.io\/animation\/cce25167cb1d3404\/","userId":"0DyHqK6Yj9dM","username":"good bois","uemail":"crazy suitcase","numContact":"0","ut":23,"ve":false,"isEmbed":0,"nextUrl":"\/movie\/<movieId>\/0\/1","bgload":"https:\/\/josephcrosmanplays532.github.io\/animation\/cce25167cb1d3404\/go_full.swf","lid":"13","ctc":"go","themeColor":"silver","tlang":"en_US","siteId":"13","templateshow":"false","forceshow":"false","appCode":"go","lang":"en","tmcc":"192","fb_app_url":"https:\/\/gavyond.herokuapp.com\/","is_published":"1","is_private_shared":"0","upl":1,"role":"student","hb":"1","pts":"0","msg_index":"","ad":0,"has_asset_bg":0,"has_asset_char":0,"initcb":"studioLoaded","retut":0,"s3base":"https:\/\/josephcrosmanplays532.github.io\/thumbnails\/","st":"","uisa":0,"u_info_school":"OjI6a2JxQzN0MFNSKzFTYW4wTENRc01PZ2N6TURkZ0J3OWFmTzRjeW9aS3l1ak04MCtnUE5CUFo3Y0hmT0JDZndlMDlCM1V0VVVfc05pTU41cGVHYXpKOXV4YVpPZG9icHNoMHNHZmtiWjMxRnpTYlFXNDdPNHk0PQ==","tm":"FIN","tray":"custom","uplp":0,"isWide":1};
+        params = {
+                  
+                flashvars = {"movieId":"","loadas":0,"asId":"","originalId":"","apiserver":"https:\/\/gavyond.herokuapp.com\/","storePath":"https:\/\/josephcrosmanplays532.github.io\/store\/4e75f501cfbf51e3\/<store>","clientThemePath":"https:\/\/josephcrosmanplays532.github.io\/static\/642cd772aad8e952\/<client_theme>","animationPath":"https:\/\/josephcrosmanplays532.github.io\/animation\/cce25167cb1d3404\/","userId":"0DyHqK6Yj9dM","username":"good bois","uemail":"crazy suitcase","numContact":"0","ut":23,"ve":false,"isEmbed":0,"nextUrl":"\/movie\/<movieId>\/0\/1","bgload":"https:\/\/josephcrosmanplays532.github.io\/animation\/cce25167cb1d3404\/go_full.swf","lid":"13","ctc":"go","themeColor":"silver","tlang":"en_US","siteId":"13","templateshow":"false","forceshow":"false","appCode":"go","lang":"en","tmcc":"192","fb_app_url":"https:\/\/gavyond.herokuapp.com\/","is_published":"1","is_private_shared":"0","upl":1,"role":"student","hb":"1","pts":"0","msg_index":"","ad":0,"has_asset_bg":0,"has_asset_char":0,"initcb":"studioLoaded","retut":0,"s3base":"https:\/\/josephcrosmanplays532.github.io\/thumbnails\/","st":"","uisa":0,"u_info_school":"OjI6a2JxQzN0MFNSKzFTYW4wTENRc01PZ2N6TURkZ0J3OWFmTzRjeW9aS3l1ak04MCtnUE5CUFo3Y0hmT0JDZndlMDlCM1V0VVVfc05pTU41cGVHYXpKOXV4YVpPZG9icHNoMHNHZmtiWjMxRnpTYlFXNDdPNHk0PQ==","tm":"FIN","tray":"custom","uplp":0,"isWide":1};
 
         var _ccad = null;
 
