--- a/index.html
+++ b/index.html
@@ -267,9 +267,8 @@ function voiceBanner(bannerId) {
         resize_studio = false;
     }    
 
-        params = {
                   
-                flashvars={"apiserver":"https://gavyond.herokuapp.com/","storePath":"https://josephcrosmanplays532.github.io/store/3a981f5cb2739137/<store>","isEmbed":0,"ctc":"go","ut":23,"u_info_school":"OjI6c2xoVVM3MWJIX05DMnA4cmRBQ2dFd3JvNE5xc2JEc2o4UFB2X1dVd2Eya2RPQisxVTl4d3ZHZHJPYnI4QURFNENWMjNkYm12WFdlUGxLT0g0OG4rekF5ajZhWGRGVTlocmJ4S1JhSWhCVXJlTF9BbXdyQUp3PQ==","bs":"default","appCode":"go","page":"","siteId":"go","role":"student","lid":13,"isLogin":"Y","retut":1,"clientThemePath":"https://josephcrosmanplays532.github.io/static/ad44370a650793d9/<client_theme>","themeId":"business","tlang":"en_US","presaveId":"m-1","goteam_draft_only":0,"isWide":1,"collab":0,"nextUrl":"/html/list.html"}
+         studio_data.flashvars={"apiserver":"https://gavyond.herokuapp.com/","storePath":"https://josephcrosmanplays532.github.io/store/3a981f5cb2739137/<store>","isEmbed":0,"ctc":"go","ut":23,"u_info_school":"OjI6c2xoVVM3MWJIX05DMnA4cmRBQ2dFd3JvNE5xc2JEc2o4UFB2X1dVd2Eya2RPQisxVTl4d3ZHZHJPYnI4QURFNENWMjNkYm12WFdlUGxLT0g0OG4rekF5ajZhWGRGVTlocmJ4S1JhSWhCVXJlTF9BbXdyQUp3PQ==","bs":"default","appCode":"go","page":"","siteId":"go","role":"student","lid":13,"isLogin":"Y","retut":1,"clientThemePath":"https://josephcrosmanplays532.github.io/static/ad44370a650793d9/<client_theme>","themeId":"business","tlang":"en_US","presaveId":"m-1","goteam_draft_only":0,"isWide":1,"collab":0,"nextUrl":"/html/list.html"}
         
         var _ccad = null;
 
