--- a/index.html
+++ b/index.html
@@ -268,8 +268,7 @@ function voiceBanner(bannerId) {
     }    
 
                   
-         studio_data.flashvars={"apiserver":"https://gavyond.herokuapp.com/","storePath":"https://josephcrosmanplays532.github.io/store/3a981f5cb2739137/<store>","isEmbed":0,"ctc":"go","ut":23,"u_info_school":"OjI6c2xoVVM3MWJIX05DMnA4cmRBQ2dFd3JvNE5xc2JEc2o4UFB2X1dVd2Eya2RPQisxVTl4d3ZHZHJPYnI4QURFNENWMjNkYm12WFdlUGxLT0g0OG4rekF5ajZhWGRGVTlocmJ4S1JhSWhCVXJlTF9BbXdyQUp3PQ==","bs":"default","appCode":"go","page":"","siteId":"go","role":"student","lid":13,"isLogin":"Y","retut":1,"clientThemePath":"https://josephcrosmanplays532.github.io/static/ad44370a650793d9/<client_theme>","themeId":"business","tlang":"en_US","presaveId":"m-1","goteam_draft_only":0,"isWide":1,"collab":0,"nextUrl":"/html/list.html"}
-        
+         studio_data.flashvars={"apiserver":"https://gavyond.herokuapp.com/","storePath":"https://josephcrosmanplays532.github.io/store/3a981f5cb2739137/<store>","clientThemePath":"https://josephcrosmanplays532.github.io/static/ad44370a650793d9/<client_theme>","isEmbed":0,"ctc":"go","ut":23,"appCode":"go","page":"","siteId":"go","lid":13,"isLogin":"Y","retut":0,"themeId":"business","tray":"custom","tlang":"en_US","presaveId":"m-0","goteam_draft_only":0,"isWide":1,"nextUrl":"/pages/html/list.html"}        
         var _ccad = null;
 
         function proceedWithFullscreenStudio() {
@@ -546,7 +545,7 @@ function loadLegacyPreview() {
     createPreviewPlayer("playerdiv", {
         height: 360,
         width: 640,
-        player_url: "https://josephcrosmanplays532.github.io/animation/66453a3ba2cc5e1a/player.swf",
+        player_url: "https://josephcrosmanplays532.github.io/animation/66453a3ba2cc5e1b/player.swf",
         quality: "medium"
     }, {
         movieOwner: "", movieOwnerId: "", movieId: "", ut: "-1",
@@ -554,8 +553,8 @@ function loadLegacyPreview() {
         apiserver: "https://gavyond.herokuapp.com/", thumbnailURL: "", copyable: "0", isPublished: "0", ctc: "go", tlang: "en_US", is_private_shared: "0",
         autostart: "1", appCode: "go", is_slideshow: "0", originalId: "0", is_emessage: "0", isEmbed: "0", refuser: "",
         utm_source: "", uid: "", isTemplate: "1", showButtons: "0", chain_mids: "", showshare: "0", averageRating: "",
-                    s3base: "https://josephcrosmanplays532.github.io/thumbnails/,https://rebornassets.wrapper.online/",
-                ratingCount: "", fb_app_url: "https://gavyond.herokuapp.com/", numContact: 0, isInitFromExternal: 1, storePath: "https://josephcrosmanplays532.github.io/store/3a981f5cb2739137/<store>", clientThemePath: "https://josephcrosmanplays532.github.io/static/55910a7cd204c37c/<client_theme>", animationPath: "https://josephcrosmanplays532.github.io/animation/66453a3ba2cc5e1a/",
+                    s3base: "https://josephcrosmanplays532.github.io/thumbnails/",
+                ratingCount: "", fb_app_url: "https://gavyond.herokuapp.com/", numContact: 0, isInitFromExternal: 1, storePath: "https://josephcrosmanplays532.github.io/store/3a981f5cb2739137/<store>", clientThemePath: "https://josephcrosmanplays532.github.io/static/55910a7cd204c37c/<client_theme>", animationPath: "https://josephcrosmanplays532.github.io/animation/66453a3ba2cc5e1b/",
         startFrame: previewStartFrame
     });
     $('#previewPlayer').removeClass('using-h5');
