--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ function voiceBanner(bannerId) {
     }    
 
                   
-        studio_data.flashvars = {"apiserver":"https://goanimatelegacybeta.herokuapp.com/","storePath":"https://josephcrosmanplays532.github.io/store/3a981f5cb2739137/<store>","isEmbed":1,"ctc":"go","ut":60,"bs":"default","appCode":"go","page":"","siteId":"go","lid":13,"isLogin":"Y","retut":1,"clientThemePath":"https://josephcrosmanplays532.github.io/static/ad44370a650793d9/<client_theme>","themeId":"business","tlang":"en_US","presaveId":"m-0","goteam_draft_only":1,"isWide":1,"nextUrl":"/pages/html/list.html"}        
+        studio_data.flashvars = {"apiserver":"https://goanimatelegacybeta.herokuapp.com/","storePath":"https://josephcrosmanplays532.github.io/store/3a981f5cb2739137/<store>","isEmbed":1,"ctc":"go","ut":60,"bs":"default","appCode":"go","page":"","siteId":"go","lid":13,"isLogin":"Y","retut":1,"clientThemePath":"https://josephcrosmanplays532.github.io/static/ad44370a650793d9/<client_theme>","themeId":"business","tray":"custom","tlang":"en_US","presaveId":"m-0","goteam_draft_only":1,"isWide":1,"nextUrl":"/pages/html/list.html"}        
         
         var _ccad = null;
 
